  
- Fix for tracker 3034220, jEdit fails to load text-file under Mac OS X
  (#3034220 - Evan Wright)
  
- Fixed a bug that occured when jumping to a line inside of a nested fold.
  (#3406213 - Evan Wright)
  
- Fixed a bug which caused lines to disappear when using indent folding
  if every line was indented (#3412237 - Evan Wright)

}}}
{{{ API Changes

- Added a possibility to get the pure path from a VFS path without the
  overhead of the VFS like usernames, passwords, hosts, archive files and
  so on. VFS implementations should check whether they need to override
  the new getFilePath method. (Björn "Vampire" Kautler)

- Added EnhancedTreeCellRenderer to be used as Look and Feel change aware
  alternative base class instead of DefaultTreeCellRenderer for custom
  TreeCellRenderers. (Björn "Vampire" Kautler)

- Added TaskAdapter that is a default implementation of the TaskListener
  (Matthieu Casanova)

- TaskManager.countTasks() returns the number of tasks in queue
  (Matthieu Casanova)

- New methods JEditBuffer.setContextInsensitive(boolean) and
  JEditBuffer.GetContextInsensitive() to manage the new attribute
  contextInsensitive of JEditBuffer. By default it is set by the
  edit mode, but you can change it's value (careful, it can break
  the syntax highlight of your buffer if you don't know what you do)
  (Matthieu Casanova)

- New method TextArea.getVisibleLineText(screenLine) and
  TextArea.getVisibleLineSegment() that returns
  the visible part of the given line (Matthieu Casanova)

- AbstractOptionPane.save() and AbstractOptionPane.init() are now
  final as they should be since jEdit 4.2

- API made public:
  org.gjt.sp.jedit.browser.VFSFileNameField (Marcelo Vanzin)

- API made private:
  FileVFS.modified
  (Matthieu Casanova)

- Removed Deprecated apis :
  EditPlugin.createMenuItems(Vector menuItems)
  EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
  HistoryModel.clear()
  JEditTextArea.getSelectionStart()